--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -27,5 +27,6 @@ services:
       - "3306:3306"
     volumes:
       - ./db/data:/var/lib/mysql
+      - ./db/my.cnf:/etc/mysql/my.cnf:ro
     env_file:
       - ./db/config.env
