upgrade php to 7.2

--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,13 +1,11 @@
-FROM php:5.6-fpm
-
+FROM php:7.2-fpm
 RUN apt-get update && apt-get install -y \
         libfreetype6-dev \
         libjpeg62-turbo-dev \
-        libmcrypt-dev \
-        libpng12-dev \
-    && docker-php-ext-install -j$(nproc) iconv mcrypt pdo pdo_mysql mysqli mbstring json opcache fileinfo zip \
-    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-    && docker-php-ext-install -j$(nproc) gd
+        libpng-dev
+RUN docker-php-ext-install -j$(nproc) iconv gd pdo pdo_mysql zip mbstring json opcache fileinfo
+RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
+
 
 RUN pecl install xdebug
 
