--- a/php-fpm/php.ini
+++ b/php-fpm/php.ini
@@ -1993,4 +1993,4 @@ ldap.max_links = -1
 ; Local Variables:
 ; tab-width: 4
 ; End:
-zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20131226/xdebug.so
+; zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20170718/xdebug.so
